--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-dom-confetti": "^0.2.0",
     "react-modal": "^3.11.2",
+    "react-progressive-graceful-image": "^0.6.12",
     "react-scripts": "3.4.3",
     "styled-components": "^4.4.1"
   },
