--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dom-confetti": "^0.2.0",
+    "react-ga": "^3.1.2",
     "react-modal": "^3.11.2",
     "react-progressive-graceful-image": "^0.6.12",
     "react-scripts": "3.4.3",
